# hello_pygame

./: .gitignore  README.md  main.py  pyproject.toml  todo
src/hello_pygame/: danmaku.py  enemy.py  entities.py  gfx.py  items.py  level_data.py  main.py  player.py  profiler.py  settings.py
