[project]
name = "hello-pygame"
version = "0.1.0"
description = "my pygame hello world"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

# get uv to check /src
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# now, we can run with 'uv run play'
[project.scripts]
# pkg.file:function
play = "hello_pygame.main:main"
